--- a/pages/style.css
+++ b/pages/style.css
@@ -13,10 +13,10 @@ html body img {
       width: 100%;
       text-align: center;
       z-index: 100;
-      background: rgb(42, 42, 42);
+      background: white;
       display: flex;
       justify-content: center;
-      font-size: 2rem;
+      font-size: 30px;
       color: white;
 }
 
